--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "boilerplate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
     "test": "jest",
     "test:watch": "yarn test --watch",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook -s ./public"
   },
   "husky": {
     "hooks": {
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "next": "9.4.4",
+    "next-pwa": "^3.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1"
